--- a/README.org
+++ b/README.org
@@ -1,8 +1,9 @@
 * SSH
   - To get keys
   #+begin_src bash
-./sshproxy.sh -u <nersc_username>
+./sshproxy.sh -u <username>
   #+end_src
   - To login
     #+begin_src bash
+    ssh -l <username> -i ~/.ssh/nersc  cori.nersc.gov
     #+end_src
