--- a/README.org
+++ b/README.org
@@ -7,3 +7,8 @@
     #+begin_src bash
     ssh -l <username> -i ~/.ssh/nersc  cori.nersc.gov
     #+end_src
+* Cmake
+  - build with flags
+    #+begin_src bash
+      mkdir build;cd build;cmake ../ -DCMAKE_CXX_FLAGS_RELEASE="-O0";make
+    #+end_src
