--- a/tsunami/README.org
+++ b/tsunami/README.org
@@ -3,3 +3,7 @@
 *** Install HDF5
 *** Clang compiler
 *** Python
+*** OpenMP
+    #+BEGIN_SRC bash
+    export LD_LIBRARY_PATH="$HOME/.local/lib/:$LD_LIBRARY_PATH"
+    #+END_SRC
